[metadata]
name = smd9000
version = attr: smd9000.__version__
author = Strain Measurement Devices
author_email = askus@smdsensors.com
description = A package for interfacing the SMDs SMD9000 flow sensor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StrainMeasurementDevices/smd9000-python
license = MIT License
project_urls =
    Bug Tracker = https://github.com/StrainMeasurementDevices/smd9000-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = smd9000
python_requires = >=3.7
install_requires =
    pyserial == 3.5
    click == 8.1.3           # For the CLI utility so pip installs it as a dependency

[options.entry_points]
console_scripts =
    smd9000 = smd9000.cli:cli [click]